# htsim

./: CMakeLists.txt  LICENSE  README.md
cfg/: simu.cfg
cmake/: config.h.in
src/main/cpp/: AnalyticSolver.cpp  ConfigurationReader.cpp  ExportUtils.cpp  HeatTransferSolver.cpp  NonStationarySolver.cpp  SimulationConfiguration.cpp  StationarySolver.cpp  TemporalTempratureInterpolator.cpp  TempratureInterpolator.cpp  main.cpp
src/main/include/: AnalyticSolver.h  ConfigurationReader.h  ExportUtils.h  HeatTransferSolver.h  NonStationarySolver.h  SimulationConfiguration.h  StationarySolver.h  TemporalTempratureInterpolator.h  TempratureInterpolator.h
